--- a/proyecto_integrador/nbproject/project.properties
+++ b/proyecto_integrador/nbproject/project.properties
@@ -27,9 +27,27 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyecto_integrador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-dbcp-1.4.jar=libs\\commons-dbcp-1.4.jar
+file.reference.commons-pool-1.6.jar=libs\\commons-pool-1.6.jar
+file.reference.hamcrest-core-1.3.jar=libs\\hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=libs\\junit-4.12.jar
+file.reference.postgresql-9.4.1209.jar=libs\\postgresql-9.4.1209.jar
+file.reference.sqljdbc4-2.0.jar=libs\\sqljdbc4-2.0.jar
+file.reference.sqljdbc41.jar=libs\\sqljdbc41.jar
+file.reference.sqljdbc42.jar=libs\\sqljdbc42.jar
+file.reference.substance-4.3.jar=libs\\substance-4.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-dbcp-1.4.jar}:\
+    ${file.reference.commons-pool-1.6.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.postgresql-9.4.1209.jar}:\
+    ${file.reference.sqljdbc4-2.0.jar}:\
+    ${file.reference.sqljdbc41.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.substance-4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
